# beast

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  plan.md
.github/workflows/: cd.yml  ci.yml
beast/: Cargo.toml
beast/src/: algebraic.rs  converter.rs  json.rs  lib.rs  main.rs  variable_table.rs
beast/tests/: integration.rs
docs/: ARCHITECTURE.md
quine-mccluskey/: Cargo.toml
quine-mccluskey/src/: lib.rs
